新增接口： 获取单个测试用例的内容
