# openapi/specs/openapi.yaml
@@ -116,6 +116,30 @@ paths:
                 $ref: '#/components/schemas/create_failed'
 
   /testcases/{case_id}:
+    get:
+      summary: 获取测试用例
+      description: 根据id获取指定的测试用例
+      operationId: openapi.api.testcase.content
+      parameters:
+      - description: 测试用例id
+        in: path
+        name: case_id
+        schema:
+          type: string
+        required: true
+      responses:
+        200:
+          description: 获取指定测试用例的内容
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  case_id:
+                    type: string
+                  content:
+                    $ref: '#/components/schemas/testcase_structure'
+
     put:
       summary: 更新测试用例
       description: 更新指定的测试用例
